Fix nav menu showing expanded or collapsed lists wrong

--- a/bots/webconsole/public/style.css
+++ b/bots/webconsole/public/style.css
@@ -19,7 +19,8 @@ ul {
     background: #252526;
     border-right: 1px solid #333;
     overflow-y: auto;
-    padding: 10px;
+    padding-left: 10px;
+    margin-left: 10px;
 }
 
 #nav ul li {
@@ -34,9 +35,9 @@ ul {
 }
 
 #nav ul li::before {
-    content: "";
+    content: "🢒";
     position: absolute;
-    left: -10px;
+    left: -8px;
     top: 0;
     width: 1px;
     height: 100%;
@@ -47,12 +48,11 @@ ul {
     display: none;
 }
 
-#nav li::after {
-    content: "▸";
+#nav li::before {
+    content: "🢒";
+    left: 10px;
     position: absolute;
-    right: 5px;
     color: #888;
-    transition: transform 0.15s ease;
 }
 
 #nav li a {
@@ -60,12 +60,13 @@ ul {
     color: #ddd;
 }
 
-#nav li.expanded::after {
-    transform: rotate(90deg);
+#nav li.expanded::before {
+    top: 7px;
+    content: "🢓";
     color: #ccc;
 }
 
-#nav li.no-children::after {
+#nav li.no-children::before {
     content: "";
 }
 
@@ -86,6 +87,7 @@ ul {
 #main div div {
     margin-top: 5px;
     padding: 4px 8px;
-    background: #333;
+    background-color: rgba(48, 48, 48, 50%);
+    border: rgba(59, 59, 59, 50%) solid thin;
     border-radius: 4px;
 }
